@@ -11,9 +11,9 @@ Version 2.23
 
   2898, 14341, 15786, 16141, 16517, 16519, 16520, 16734, 16973, 17787,
   17905, 18084, 18086, 18240, 18265, 18370, 18421, 18480, 18525, 18610,
-  18618, 18647, 18661, 18674, 18681, 18757, 18778, 18781, 18787, 18789,
-  18790, 18795, 18796, 18820, 18823, 18824, 18863, 18870, 18873, 18887,
-  18921.
+  18618, 18647, 18661, 18674, 18675, 18681, 18757, 18778, 18781, 18787,
+  18789, 18790, 18795, 18796, 18820, 18823, 18824, 18863, 18870, 18873,
+  18887, 18921.
 
 * The obsolete header <regexp.h> has been removed.  Programs that require
   this header must be updated to use <regex.h> instead.
